# mail-zoner

./: LICENSE  README.md  pyproject.toml
data_webis/logs_evaluation/validation/: events.out.tfevents.1636927077.2625365ce5cf.72.2.v2
data_webis/logs_train/train/: events.out.tfevents.1636924532.2625365ce5cf.72.0.v2
data_webis/logs_train/validation/: events.out.tfevents.1636924817.2625365ce5cf.72.1.v2
data_webis/modelcheckpoint/: mailzone.ckpt.index
mail_zoner/: parameters.py
mail_zoner/functions/: data_generator.py  experiment.py  generate_features.py  model.py  predict.py  preprocessing_labelstudio.py  preprocessing_webis.py  tokenizer.py
mail_zoner/notebooks/: data_generator.ipynb  experiment.ipynb  generate_features.ipynb  predict.ipynb  preprocessing_labelstudio.ipynb  preprocessing_webis.ipynb  tokenizer.ipynb
mail_zoner/util/: util.py
