[tool.poetry]
name = "mail-zoner"
version = "0.1.0"
description = ""
authors = ["Alper Karaaslan <alper.karaaslan15@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jsonlines = "^2.0.0"
pandas = "^1.3.4"
ipykernel = "^6.5.1"
tqdm = "^4.62.3"
transformers = "^4.12.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
